tests/invalid/runtime/utf8_invalid_bytes.pts
import Io;

function main() : void {
    list<byte> bytes = [0xC0.toByte(), 0xAF.toByte()];
    string s = bytes.toUtf8String();
    Io.printLine(s);
}
